# file-organizer-tool

./: LICENSE  README.md  file_organizer.py  pyproject.toml
file_organizer/: __init__.py  cli.py  core.py
tests/unit/: test_core.py
