[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "file_organizer"
authors = [{name = "Meghana Cheruvu", email = "m.cheruvu711@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = ["unittest"]

[project.scripts]
file-organizer = "file_organizer.cli:main"
